fix review css alignment on beer details page.

--- a/src/components/ReviewCard/ReviewCard.module.css
+++ b/src/components/ReviewCard/ReviewCard.module.css
@@ -6,6 +6,29 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 100%;
+}
+
+.comment {
+  width: 75px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.button {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.card button {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  text-wrap: wrap;
 }
 
 .container {
@@ -16,3 +39,4 @@ img {
   display: flex;
   flex-direction: column;
 }
+
